--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
     "mysql2": "^3.3.1",
+    "seed": "^0.4.4",
     "sequelize": "^6.31.1"
   }
 }
